fixing spacing ha ha ha ha

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ a {
 
 hr {
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .title {
